# intel_8080_emulator

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: emulator.rs  lib.rs  main.rs
src/actor/: cpu_actor.rs  mod.rs  ui_actor.rs
src/architecture/: Cargo.toml  condition_codes.rs  cpu.rs  cpu_context.rs  instruction.rs  instruction_set.rs  isa.rs  mod.rs  opcodes.rs  processor.rs  registers.rs  state.rs
src/architecture/devices/: input_handler.rs  mod.rs  output_handler.rs
src/architecture/instructions/: call.rs  carry_bit.rs  data.rs  data_transfer.rs  direct_addressing.rs  double_register.rs  hlt.rs  immediate.rs  interrupt.rs  io.rs  jump.rs  mod.rs  nop.rs  register_pair.rs  returns.rs  rotate_accumulator.rs  rst.rs  single_register.rs  to_accumulator.rs
src/architecture/model/: condition_codes.rs  instruction.rs  mod.rs  state.rs
src/architecture/models/: instruction.rs  state.rs
src/architecture/src/: instruction.rs  isa.rs  lib.rs  opcodes.rs  processor.rs  registers.rs  state.rs
src/architecture/units/: arithmetic_logic_unit.rs  control_unit.rs  io_unit.rs  memory_unit.rs  mod.rs  processing_unit.rs  stack.rs
src/disassembler/: Cargo.toml  converter.rs  mod.rs  parser.rs  util.rs
src/disassembler/src/: converter.rs  lib.rs  parser.rs  util.rs
src/emulator/: Cargo.toml
src/emulator/src/: cpu.rs  lib.rs
src/ui/: mod.rs  settings.rs  window.rs
src/ui/controllers/: arcade_controller.rs  mod.rs
src/ui/models/: screen.rs
src/ui/views/: input_view.rs  mod.rs  screen_view.rs  stack_trace_view.rs  state_view.rs
(+19 files in other folders)
