[package]
name = "invaders_emulator"
version = "0.1.0"
authors = ["Leah Ferrell <leahferrell03@gmail.com>"]
edition = "2018"

[lib]
name = "invaders_emulator"
path = "./src/lib.rs"

[dependencies.invaders-disassembler]
path = "src/disassembler"

[dependencies.invaders-emulator]
path = "src/emulator"

[dependencies.invaders-architecture]
path = "src/architecture"
