[package]
name = "intel_8080_emulator"
version = "0.1.0"
authors = ["Leah Ferrell <leahferrell03@gmail.com>"]
edition = "2018"

[lib]
name = "intel_8080_emulator"
path = "./src/lib.rs"

[dependencies]
strum = "0.15.0"
strum_macros = "0.15.0"
piston = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
pistoncore-glutin_window = "*"